<resources>
    <string name="app_name">AMAZE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="size_label">Size:</string>
    <string name="select_algorithm_label">Algorithm:</string>
    <string name="load_maze">Load Maze</string>
    <string name="create_maze">Create Maze</string>
    <string-array name="select_generation_algorithm">
        <item>Manual</item>
        <item>Prim</item>
        <item>Kruskal</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="load_bar_label">Loading...</string>

    <string name="show_map">Map:\ \ </string>
    <string name="show_solution">Solution:\ \ </string>
    <string name="show_full_map">Full Map:\ \ </string>
    <string name="shortcut">Shortcut</string>

    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="win">Finish</string>
    <string name="lose">Low Battery</string>
    <string name="robot">Robot:</string>
    <string name="generation">Generation:</string>

</resources>
