<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AMazeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="575dp"
        android:layout_height="632dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeSplitBackground" />

    <Button
        android:id="@+id/create_maze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        android:max="9"
        android:onClick="switchToGenerating"
        android:progress="2"
        android:text="@string/create_maze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/size"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="267dp"
        android:layout_height="33dp"
        android:layout_marginBottom="116dp"
        android:layout_marginStart="8dp"
        android:max="9"
        android:progress="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/size_label" />

    <TextView
        android:id="@+id/size_label"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:layout_marginStart="16dp"
        android:text="@string/size_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/load_maze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:onClick="switchToGenerating"
        android:text="@string/load_maze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/select_robot"
        android:layout_width="153dp"
        android:layout_height="31dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        android:entries="@array/select_generation_algorithm"
        app:layout_constraintBottom_toTopOf="@+id/size"
        app:layout_constraintStart_toEndOf="@+id/select_robot_label" />

    <TextView
        android:id="@+id/select_robot_label"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/robot"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/size_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/select_generation"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/select_robot"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/generation"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/select_robot_label"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="193dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/title_text"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/magic_wand_foreground" />

</android.support.constraint.ConstraintLayout>