<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayManuallyActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_maze" />

    <Switch
        android:id="@+id/show_maze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/show_solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_solution"
        app:layout_constraintStart_toEndOf="@+id/show_maze"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/show_full_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_full_map"
        app:layout_constraintStart_toEndOf="@+id/show_solution"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/up_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/right_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintEnd_toStartOf="@+id/up_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintStart_toEndOf="@+id/up_button" />

    <Button
        android:id="@+id/down_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/MazeView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</android.support.constraint.ConstraintLayout>